[project]
name = "ml-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.0",
    "flask>=3.1.2",
    "numpy>=2.4.1",
    "openrouter>=0.1.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "streamlit>=1.52.2",
]
